# TorchOpt

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  quick_start.py  run_tests.py
algorithm/: pso.py
benchmarks/: classic.py
core/: base.py
docs/en/: algorithms.md  benchmarks.md  extending.md  index.md  installation.md  quick_start.md
docs/zh/: algorithms.md  benchmarks.md  extending.md  index.md  installation.md  quick_start.md
tests/: test_benchmarks.py  test_core.py  test_optimizers.py
torchopt/algorithm/: cma_es.py  pso.py
torchopt/benchmarks/: classic.py
torchoptlib/: __init__.py
torchoptlib/algorithms/: cma_es.py  de.py  pso.py
torchoptlib/benchmarks/: classic.py
torchoptlib/core/: base.py
